# endotheliosis_quantifier

./: .cursorignore  .gitattributes  .gitignore  AGENTS.md  GOALS.md  README.md  REINTEGRATION_TODO.md  TECHNICAL_LAB_NOTEBOOK.md  analysis_registry.yaml  chatgpt_codex_prompt.txt  environment-macos.yml  environment.yml  notes.sh  package-lock.json  pyproject.toml  pyrightconfig.json
.history/: .gitattributes_20250821114223  README_20250821094544.md  README_20250821100710.md  README_20250821101530.md  README_20250821103754.md  README_20250821114229.md  README_20250821130008.md  README_20250821130030.md  create_better_visualization_20250821201710.py  create_better_visualization_20250821201739.py  environment_20250821083431.yml  environment_20250821084637.yml  environment_20250821084848.yml  environment_20250821085901.yml  environment_20250821152355.yml  environment_20250821154036.yml  pyproject_20250821102607.toml  pyproject_20250821102618.toml  pyproject_20250821102639.toml  pyproject_20250821102651.toml  pyproject_20250821102706.toml  pyproject_20250821105512.toml  pyproject_20250821135055.toml  pyproject_20250821200554.toml  run_pipeline_20250821202645.py  run_production_pipeline_20250821182109.py  run_production_pipeline_20250821190853.py  run_production_pipeline_20250821193753.py  run_quick_production_20250821195836.py  run_quick_production_20250821200000.py  run_quick_production_20250821200014.py  test_data_format_20250821201519.py  test_data_format_20250821201548.py  test_data_format_20250821201559.py  test_data_format_20250821201608.py  test_data_format_20250821201739.py  test_fastai_pipeline_20250821181555.py  test_fastai_pipeline_20250821181619.py  test_fastai_training_20250821181820.py  test_fastai_training_20250821181859.py  (+2 more)
configs/: endotheliosis_quantification.yaml  full_segmentation_retrain.yaml  glomeruli_candidate_comparison.yaml  glomeruli_finetuning_config.yaml  glomeruli_transport_audit.yaml  highres_glomeruli_concordance.yaml  label_free_roi_embedding_atlas.yaml  label_studio_glomerulus_grading.xml  label_studio_medsam_hybrid.yaml  (+6 more)
(+1206 files in other folders)
