[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endotheliosis_quantifier"
version = "0.1.0"
description = "Segmentation workflows for endotheliosis and glomeruli histology"
requires-python = ">=3.10,<3.13"
authors = [{ name = "Nicholas Camarda" }]
readme = "README.md"
keywords = ["endotheliosis", "quantifier", "glomeruli", "segmentation", "quantification"]
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.12", "mypy>=1.11"]

[project.scripts]
eq = "eq.__main__:main"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
ignore = [
  "F841",  # no unused variable
  "E501",  # line length handled by formatter
  "F403",
  "F401",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["eq*"]
